--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="about.html">About me</a>
+                            <a class="nav-link" aria-current="page" href="about.html">About me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="projects.html">Projects</a>
+                            <a class="nav-link active" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Playground</a>
