scrollspy position fix
included <br> to ensure that nav doesn't obscure the titles.

--- a/projects.html
+++ b/projects.html
@@ -49,9 +49,9 @@
 
         <!--content-->
         <div id="hooray">
-
-            <article class="container mb-5" id="firstCase">
-                <h1 class="dispaly-3 text-center">Frisq</h1>
+            
+            <article class="container mb-5" id="firstCase"><br><br><br>
+                <h1 class="display-3 text-center">Frisq</h1>
                 <img src="Bilder/frisq.png" class="img-fluid centerImg mb-4" alt="Frisq app">
                 <h6 class="text-center">Research | ideating </h6>
                 <p class="lead text-center">How can we illustrate patient journeys for chronically ill patients?</p>
@@ -61,7 +61,7 @@
 
             <hr />
 
-            <article class="container mb-5" id="secondCase">
+            <article class="container mb-5" id="secondCase"><br><br><br>
                 <h1 class="display-3 text-center">Assa Abloy</h1>
                 <img src="Bilder/AssaAbloy.png" class="img-fluid centerImg mb-4" alt="Yale Smartlock">
                 <h6 class="text-center">Research | ideating | design</h6>
@@ -72,7 +72,7 @@
 
             <hr />
 
-            <article class="container" id="thirdCase">
+            <article class="container" id="thirdCase"><br><br><br>
                 <h1 class="display-3 text-center">Hemnet</h1>
                 <img src="Bilder/Hemnet.png" class="img-fluid centerImg text-center mb-4" alt="Hemnet app">
                 <h6 class="text-center">Research</h6>
